fix shift slider

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -17,7 +17,7 @@ body{
 }
 
 .page__content{
-	width: 160ch;
+	width: 80%;
 	padding-top: 9em;
 	margin: 0 auto;
 }
